feat/card-all-categories

--- a/index.html
+++ b/index.html
@@ -41,14 +41,123 @@
             </div>
         </section>
         <section class="menu">
-            <div>
+            <div class="all-categories">
                 <div class="menu__all-categories">
                     <img class="menu__all-categories--img" src="./img/menu.png" alt="">
                     <p class="menu__all-categories--text">Todas as Categorias</p>
                 </div>
+                <section class="card">
+                    <div class="card__categories">
+                        <div class="card__categories__row ">
+                            <div class="card__categories__departament first">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="./img/ver todos.png" alt="" class="card__img">
+                <section/>
             </div>
             <div>
                 <p>Departamento</p>
+                <section class="departament-card">
+                    <div>
+                        <h1 class="departament-card--title">Departamento</h1>
+                        <div class="departament-card--categories">
+                            <p>Categoria</p>
+                            <p>Categoria</p>
+                            <p>Categoria</p>
+                            <p>Categoria</p>
+                            <p>Categoria</p>
+                        </div>
+                    </div>
+                    <img src="./img/ver todos.png" alt="" class="card__img departament-img">
+                </section>
             </div>
             <div>
                 <p>Departamento</p>
@@ -72,24 +181,6 @@
                 <p>Departamento</p>
             </div>
         </section>
-
-        <section class="card">
-            <div class="card__categories">
-                <div class="card__categories__row">
-                    <div class="card__categories__departament first">
-                        <p class="card__categories__departament--text">Departamento</p>
-                        <div>
-                            <img src="./img/arrow.png" class="card__categories__departament--img"/>
-                        </div>
-                    </div>
-                    <div class="card__categories__categorie">
-                        <p class="card__categories__categories--text">Categoria</p>
-                        <p class="card__categories__categories--text">Categoria</p>
-                        <p class="card__categories__categories--text">Categoria</p>
-                    </div>
-                </div>
-            </div>
-        <section/>
     </header>
 </body>
 </html>
