--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/card.css">
+    <link rel="stylesheet" href="./styles/body.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <title>Avani Store</title>
 </head>
 <body>
-    <header>
+    <section>
         <section class="add">
             <p class="add__text">Ganhe <span class="add__text--value">R$10,00</span>  de desconto no seu primeiro pedido. Utilize o cupom <span class="add__text--emphasis">DESCONTO10</span> </p>
         </section>
@@ -139,8 +140,60 @@
                                 <p class="card__categories__categories--text">Categoria</p>
                             </div>
                         </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament ">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
+                        <div class="card__categories__row">
+                            <div class="card__categories__departament last">
+                                <p class="card__categories__departament--text">Departamento</p>
+                                <div>
+                                    <img src="./img/arrow.png" class="card__categories__departament--img"/>
+                                </div>
+                            </div>
+                            <div class="card__categories__categorie">
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                                <p class="card__categories__categories--text">Categoria</p>
+                            </div>
+                        </div>
                     </div>
-                    <img src="./img/ver todos.png" alt="" class="card__img all-categories-img">
+                    <img src="./img/ver todos.png" alt="" class="card__img">
                 <section/>
             </div>
             <div class="menu__departament">
@@ -479,13 +532,21 @@
                     <img src="./img/ver todos.png" alt="" class="card__img departament-img">
                 </section>
             </div>
-          
         </section>
-    </header>
-    <body>
-        <section class="banner">
-            <img src="./img/cadeira.png" alt="" class="banner__img">
+    </section>
+    <body class="body">
+        <section>
+            <div class="banner">
+                <div class="banner__text">
+                    <h1 class="banner__text__title"><span class="banner__title--bold">SUPER</span>SALE</h1>
+                    <h2 class="banner__text__subtitle">Itens selecionados com até</h2>
+                    <h3 class="banner__text__discount">50%off</h3>
+                </div>
+            </div>
+            <div>
+                
+            </div>
         </section>
-    </body>
+    <body/>
 </body>
 </html>
