--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./index.js"></script>
     <title>Avani Store</title>
 </head>
 <body>
@@ -535,18 +539,144 @@
         </section>
     </section>
     <body class="body">
-        <section>
-            <div class="banner">
+        <section class="banner">
                 <div class="banner__text">
                     <h1 class="banner__text__title"><span class="banner__title--bold">SUPER</span>SALE</h1>
                     <h2 class="banner__text__subtitle">Itens selecionados com até</h2>
                     <h3 class="banner__text__discount">50%off</h3>
                 </div>
-            </div>
-            <div>
-                
-            </div>
         </section>
+        <section class="product-cards">
+            <div class="product-cards__text">
+                <p class="product-cards__text__title">Lançamentos</p>
+                <p class="product-cards__text__see-more">Ver mais</p>
+            </div>
+            <div class="product-cards__container">
+                <span class="material-icons product-cards__arrow arrow-back">arrow_backward</span>
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                    </div>
+                </div>
+                <span class="material-icons product-cards__arrow arrro-next">arrow_forward</span>
+            </div>
+        <section/>
     <body/>
 </body>
-</html>
+</html
