fix/carrosell && create/product-with-description

--- a/index.html
+++ b/index.html
@@ -672,9 +672,98 @@
                             </div>
                             <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
                         </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
+                        <div class="swiper-slide product-cards__card">
+                            <p class="product-cards__card__img__new-tag">novo</p>
+                            <img src="./img/model.png" alt="" class="product-cards__card__img">
+                            <p class="product-cards__card__title"> Lorem ipsum dolor sit amet consectetuer adipiscing elit </p>
+                            <div class="product-cards__card__text">
+                                <div>
+                                    <p class="product-cards__card__price-canceled">R$ 100,00</p>
+                                    <p class="product-cards__card__price">R$ 79,90</p>
+                                </div>
+                                <p><link rel="stylesheet" href=""><p class="product-cards__card__dicount">10% off</p><link/>
+                            </div>
+                            <p class="product-cards__card__footer-text">Ou em até <span class="product-cards__card__footer-text--bold">10x de R$ 7,90</span></p>
+                        </div>
                     </div>
                 </div>
-                <span class="material-icons product-cards__arrow arrro-next">arrow_forward</span>
+                <span class="material-icons product-cards__arrow arrow-next">arrow_forward</span>
+            </div>
+            <div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </section>
+        <section class="product-with-description">
+            <img class="product-with-description__img" src="./img/caneca.png" alt="">
+            <div class="product-with-description__description">
+                <h1 class="description__title">Lorem Ipsum</h1>
+                <p class="description__text">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae finibus dui. Mauris laoreet lacus ut eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget lacinia. Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit a libero commodo egestas efficitur id augue.</p>
+                <p class="description__text">Duis consectetur metus nec lacus auctor dignissim. Mauris vitae finibus dui. Mauris laoreet lacus ut eleifend viverra. Cras efficitur volutpat dui, in lobortis metus lacinia sit amet. Sed lacinia pharetra magna, vel pulvinar ligula hendrerit a. Maecenas fringilla porttitor tortor eget lacinia. Donec sollicitudin euismod orci, auctor fringilla magna consequat interdum. Fusce sagittis elit a libero commodo egestas efficitur id augue.                  </p>
             </div>
         </section>
     </body>
